Fixed a few more compatibility things and reverted some changes Vytas made by mistake. KaM Editor still doesn't compile on Lazarus, but I don't think it ever has

--- a/KaM Editor/KM_Form_Loading.lfm
+++ b/KaM Editor/KM_Form_Loading.lfm
@@ -171,7 +171,7 @@ object FormLoading: TFormLoading
     Top = 80
     Width = 111
     Caption = 'kromster80@gmail.com'
-    Font.Color = clHotLight
+    Font.Color = clWindowText
     Font.Height = -11
     Font.Name = 'MS Sans Serif'
     Font.Style = [fsUnderline]
@@ -202,7 +202,7 @@ object FormLoading: TFormLoading
     Width = 108
     Caption = 'http://krom.reveur.de/'
     Color = clBtnFace
-    Font.Color = clHotLight
+    Font.Color = clWindowText
     Font.Height = -11
     Font.Name = 'MS Sans Serif'
     Font.Style = [fsUnderline]
