- Fixed a mistake from a previous commit  - Typing into text boxes now works in the Lazarus build

--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -15,6 +15,7 @@ object Form1: TForm1
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
+  OnKeyPress = FormKeyPress
   OnKeyUp = FormKeyUp
   OnMouseWheel = FormMouseWheel
   OnResize = FormResize
