- OnMouseWheel now works in Lazarus. For some reason it needs the event to be for the panel, not the entire form (maybe it's a bug?)  - Added some missing debug options to Lazarus  - AI no longer trains soldiers during peacetime (I forgot this was a separate method)  - AllowToTrade was not included with the save  - Added TSK mission 20 coop map (thanks andreus)

--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -210,6 +210,10 @@ object Form1: TForm1
         Caption = 'Show Units'
         OnClick = Debug_ShowUnitClick
       end
+      object Debug_EnableCheats: TMenuItem
+        Caption = 'Debug Cheats'
+        OnClick = Debug_EnableCheatsClick
+      end
       object ExportMainMenu1: TMenuItem
         Caption = 'Export MainMenu'
         OnClick = ExportMainMenu1Click
