- Single maps menu uses a memo for the map description to fit long ones  - todo item on using RGBA textures  - Commented out the pink pivot dot in exports, it's not very helpful and means you can't use the images for purposes other than looking at them. (it can be turned on by uncommenting it)  - OnCloseQuery event was not set for Lazarus

--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -12,6 +12,7 @@ object Form1: TForm1
   Font.Name = 'MS Sans Serif'
   KeyPreview = True
   Menu = MainMenu1
+  OnCloseQuery = FormCloseQuery
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   OnKeyPress = FormKeyPress
