--- a/trunk/Utils/RXXPacker/RXXPackerForm.lfm
+++ b/trunk/Utils/RXXPacker/RXXPackerForm.lfm
@@ -1,6 +1,6 @@
 object RXXForm1: TRXXForm1
   Left = 192
-  Height = 223
+  Height = 344
   Top = 148
   Width = 256
   Caption = 'RXX Packer'
@@ -14,20 +14,20 @@ object RXXForm1: TRXXForm1
   LCLVersion = '0.9.30.2'
   object btnPackRXX: TButton
     Left = 24
-    Height = 49
-    Top = 48
+    Top = 240
     Width = 185
+    Height = 49
     Caption = 'Pack to RXX File'
-    OnClick = btnPackRXXClick
     TabOrder = 0
+    OnClick = btnPackRXXClick
   end
-  object ComboBox1: TComboBox
+  object ListBox1: TListBox
     Left = 24
-    Height = 24
     Top = 16
     Width = 185
+    Height = 201
     ItemHeight = 16
-    Style = csDropDownList
+    MultiSelect = True
     TabOrder = 1
   end
 end
